# PlayIntegrityFix

app/src/main/cpp/: CMakeLists.txt
module/: customize.sh  module.prop
